<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_start_camera"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/drawer_1_camera"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            android:drawableTop="@drawable/ic_device_access_camera"/>
        <Button
            android:id="@+id/btn_start_search"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/drawer_2_search"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_dark"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_action_search"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <Button
        android:id="@+id/btn_start_map"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:text="@string/drawer_3_map"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_dark"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:drawableTop="@drawable/ic_location_place"/>
    <Button
        android:id="@+id/btn_start_log"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:textColor="@android:color/white"
        android:text="@string/drawer_4_log"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_dark"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_social_person"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btn_food"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/drawer_5_food"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_blue_light"
            android:drawableTop="@drawable/ic_device_access_storage_1"/>
        <Button
            android:id="@+id/btn_addPicture"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/drawer_6_add"
            android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/ic_content_new_picture"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_start_quiz"
        android:layout_width="match_parent"
        android:text="@string/drawer_7_quiz"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_purple"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:drawableTop="@drawable/ic_content_paste"/>




    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:src="@drawable/wwf_logo"/>

</LinearLayout>
    </ScrollView>